# blockchain-p2p

./: Cargo.toml  README.md
src/: block.rs  crypto.rs  lib.rs  main.rs  mempool.rs  mining.rs  network.rs  routes.rs  todo.md  transaction.rs  types.rs  validation.rs
src/common/: mod.rs
src/common/ports/: crypto.rs  hasher.rs  mod.rs  signature.rs  signing_key.rs  verifying_key.rs
src/common/types/: block.rs  crypto_scheme.rs  mod.rs  tx.rs  wallet.rs
src/consensus_engine/: mod.rs  network_adapter.rs
src/consensus_engine/block/: block.rs
src/consensus_engine/constants/: constants.rs
src/consensus_engine/miner/: miner.rs  mod.rs
src/consensus_engine/mocks/: mod.rs
src/consensus_engine/ports/: block_validator.rs  hasher.rs  miner.rs  mod.rs
src/consensus_engine/storage/: in_memory_storage.rs  mod.rs
src/consensus_engine/tests/: consensus_engine.rs  engine_validate_test.rs  mod.rs
src/consensus_engine/traits/: hasher.rs  mempool.rs  miner.rs  mod.rs  network.rs  storage.rs
src/consensus_engine/transaction/: transaction.rs
src/consensus_engine/types/: block.rs  consensus_engine.rs  engine.rs  mod.rs  tx.rs
src/consensus_engine/validation/: block_validator.rs  chain_validator.rs  mod.rs
src/events/ports/: event_producer.rs  event_stream.rs  mod.rs
src/events/types/: mod.rs  node_event.rs
src/mempool/: error.rs  mod.rs
src/mempool/ports/: mod.rs  signing_key.rs  verifying_key.rs
src/mempool/tests/: mod.rs  (+1 more)
src/network_layer/: mod.rs  traits.rs  types.rs
src/node/: mod.rs
tests/: blockchain_tests.rs  mempool_tests.rs  network_tests.rs
(+81 files in other folders)
