[package]
name = "blockchain-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
libsecp256k1 = "0.7"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
